# solo5

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGES  CHANGES.md  GNUmakefile  LICENSE  Makefile  Makefile.common  README.md  RELEASE.md  build.sh  checkpatch.pl  config.bash  config_mirage.bash  config_net.bash  configure.sh  dune  dune-project  gdb.txt  kernel.cfg  kvm-br.bash  mirage.config  mirage.mk  notes.txt  opam  solo5-bindings-genode.opam  solo5-bindings-genode.pc.in  solo5-bindings-hvt.opam  solo5-bindings-hvt.pc.in  solo5-bindings-muen.opam  solo5-bindings-muen.pc.in  solo5-bindings-spt.opam  solo5-bindings-spt.pc.in  solo5-bindings-virtio.opam  solo5-bindings-virtio.pc.in  solo5-bindings-vt.opam  (+11 more)
.github/workflows/: ci.yml  dragonfly.yml  freebsd.yml  lint.yml  macos.yml  openbsd.yml  ubuntu-arm.yml  ubuntu.yml
bindings/: GNUmakefile  abort.c  bindings.h  cmdline.c  cpu_aarch64.c  cpu_aarch64.h  cpu_arm.h  cpu_ppc64.h  cpu_vectors_aarch64.S  cpu_vectors_x86_64.S  cpu_x86_64.c  cpu_x86_64.h  crt.c  crt_init.h  ee_printf.c  exit.c  intr.c  lib.c  log.c  mem.c  mem32.c  mft.c  mft.h  printf.c  printf.h  solo5_hvt.lds  solo5_muen.lds  solo5_spt.lds  solo5_stub.lds  solo5_virtio.lds  solo5_xen.lds  tls.c
bindings/genode/: bindings.cc  genode_dyn.ld  genode_rel.ld  stubs.S  stubs.c
bindings/hvt/: bindings.h  block.c  console.c  net.c  pci.c  platform.c  platform_intr.c  platform_lifecycle.c  solo5_hvt.lds  start.c  time.c  tscclock.c  yield.c
bindings/muen/: bindings.h  channel.c  channel.h  muen-block.c  muen-clock.c  muen-console.c  muen-net.c  muen-net.h  muen-pci.c  muen-platform_lifecycle.c  muen-sinfo.c  muen-yield.c  muschedinfo.h  mutimeinfo.h  reader.c  reader.h  shm_net.c  shm_net.h  sinfo.h  solo5_muen.lds  start.c  time.c  util.h  writer.c  writer.h
bindings/spt/: bindings.c  bindings.h  block.c  net.c  platform.c  solo5_spt.lds  solo5_spt.lds.in  start.c  sys_linux_aarch64.c  sys_linux_arm.c  sys_linux_ppc64le.c  sys_linux_x86_64.c
bindings/stub/: stubs.c
bindings/virtio/: acpi.c  bindings.h  boot.S  clock_subr.c  clock_subr.h  multiboot.h  pagetable.S  pci.c  platform.c  platform_intr.c  pvclock.c  serial.c  solo5_virtio.lds  start.c  time.c  tscclock.c  virtio_blk.c  virtio_net.c  virtio_pci.h  virtio_ring.c  virtio_ring.h
bindings/vt/: bindings.h  block.c  console.c  net.c  platform.c  platform_intr.c  platform_lifecycle.c  start.c  time.c  tscclock.c  yield.c
bindings/xen/: bindings.h  boot.S  console.c  evtchn.c  hypercall-x86_64.h  hypercall.h  hypercall_page.S  pagetable.S  platform.c  platform_intr.c  pvclock.c  solo5_xen.lds  start.c  stubs.c  time.c
docker/: Dockerfile  build_xcompile.bash  solo5-startup.bash
docs/: architecture.md  building.md  contributing.md  debugging.md
elftool/: GNUmakefile  elftool.c  json.h
include/: elf_abi.h  hvt_abi.h  hvt_ring.h  mft_abi.h  solo5.h  spt_abi.h
include/solo5/: dune  elf_abi.h  hvt_abi.h  mft_abi.h  mft_types.h  solo5.h  spt_abi.h  virtio_abi.h  vt_guest.h
include/xen/: arch-arm.h  argo.h  callback.h  device_tree_defs.h  dom0_ops.h  domctl.h  elfnote.h  errno.h  event_channel.h  features.h  grant_table.h  kexec.h  memory.h  nmi.h  physdev.h  platform.h  pmu.h  sched.h  sysctl.h  tmem.h  trace.h  vcpu.h  version.h  vm_event.h  xen-compat.h  xen.h  xencomm.h  xenoprof.h
kernel/: GNUmakefile  Makefile  Makefile.app  Makefile.common  Makefile.solo5  Makefile.test_hello  abort.c  acscope.files  app_stubs.h  app_undefined.c  app_undefined.h  clock_subr.c  clock_subr.h  cmdline.c  cpu.S  cpu.h  cpu_aarch64.c  cpu_aarch64.h  cpu_vectors.S  cpu_vectors_aarch64.S  cpu_vectors_x86_64.S  cpu_x86_64.c  cpu_x86_64.h  devices.h  ee_printf.c  exit.c  gdt.c  gen_app_and_undef.bash  gen_interrupts.bash  gen_ld.bash  gen_undefined.bash  interrupts.c  interrupts.h  interrupts.s  intr.c  io.c  kernel.c  kernel.h  kernel.s  lib.c  (+18 more)
kernel/lib/: Makefile.openlibm
kernel/muen/: channel.c  channel.h  muen-block.c  (+19 more)
lib/: lib.ml
lib32/: GNUmakefile
loader/: Makefile  boot.s  gdt.c  lib.c  loader.c  loader.h  loader.ld  loader_info.h  multiboot.h  page_tables.c  printk.c  to64.s
manifest/: GNUmakefile  json.h  mfttool.c
mfttool/: GNUmakefile  mfttool.c
monitors/: blk.c  core.c  elf.c  gdb.c  net.c  ukvm-configure  ukvm-cpu.h  ukvm-elf.h  ukvm-modules.h  ukvm-private.h  ukvm.h  unikernel-monitor.h
opam/: .merlin  solo5-bindings-genode.opam  solo5-bindings-genode.pc.in  solo5-bindings-hvt.opam  solo5-bindings-hvt.pc.in  solo5-bindings-muen.opam  solo5-bindings-muen.pc.in  solo5-bindings-spt.opam  solo5-bindings-spt.pc.in  solo5-bindings-virtio.opam  solo5-bindings-virtio.pc.in  solo5-bindings-xen.opam  solo5-bindings-xen.pc.in  solo5-bindings.opam  solo5-bindings.pc.in  solo5-config-ocaml-static.opam  solo5-cross-aarch64.opam  solo5-headers.opam  solo5-headers.pc.in  solo5.opam
pkgconfig/: solo5-bindings-genode.pc.in  solo5-bindings-hvt.pc.in  solo5-bindings-muen.pc.in  solo5-bindings-spt.pc.in  solo5-bindings-virtio.pc.in  solo5-bindings-xen.pc.in
scripts/: gen_version_h.sh  opam-release.sh  solo5-config.sh.in
tenders/: GNUmakefile
tests/: GNUmakefile  Makefile  Makefile.tests  README.md  config.xl.in  run-tests-travis.sh  run-tests.sh  setup-tests.sh  tests.bats
toolchain/: GNUmakefile  cc.in  gen-headers.sh  ld.in  objcopy.in
ukvm/: GNUmakefile  Makefile  Makefile.ukvm  eventfd-aio.c  gdb-stub.c  misc.h  processor-flags.h  queue.h  ukvm-blk.c  ukvm-configure  ukvm-core.c  ukvm-cpu.h  ukvm-gdb.c  ukvm-modules.h  ukvm-net.c  ukvm-private.h  ukvm.c  ukvm.h  ukvm_cc.h  ukvm_config.bash  ukvm_core.c  ukvm_cpu_aarch64.c  ukvm_cpu_aarch64.h  ukvm_cpu_x86_64.c  ukvm_cpu_x86_64.h  ukvm_dumpcore_freebsd_x86_64.c  ukvm_dumpcore_kvm_aarch64.c  ukvm_dumpcore_kvm_x86_64.c  ukvm_dumpcore_openbsd_x86_64.c  ukvm_elf.c  ukvm_gdb.h  ukvm_gdb_aarch64.h  ukvm_gdb_freebsd_x86_64.c  ukvm_gdb_kvm_aarch64.c  ukvm_gdb_kvm_x86_64.c  ukvm_gdb_openbsd_x86_64.c  ukvm_guest.h  ukvm_hv_freebsd.c  ukvm_hv_freebsd.h  ukvm_hv_freebsd_x86_64.c  (+13 more)
unikernel/: unikernel.ml
(+355 files in other folders)
