opam-version: "1.2"
maintainer: "ehmry@posteo.net"
authors: [
  "Emery Hemingway <ehmry@posteo.net>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "https://github.com/solo5/solo5.git"
build: [make "genode"]
install: [make "opam-genode-install" "PREFIX=%{prefix}%"]
remove: [make "opam-genode-uninstall" "PREFIX=%{prefix}%"]
depends: "conf-pkg-config"
conflicts: [
  "solo5-bindings-hvt"
  "solo5-bindings-muen"
  "solo5-bindings-virtio"
]
available: [
  ocaml-version >= "4.02.3" & (arch = "x86_64" | arch = "amd64") &
  (os = "linux")
]
