opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [make "hvt"]
install: [make "opam-hvt-install" "PREFIX=%{prefix}%"]
remove: [make "opam-hvt-uninstall" "PREFIX=%{prefix}%"]
depends: "conf-pkg-config"
depexts: [
  [["alpine"] ["linux-headers"]]
  [["debian"] ["linux-libc-dev"]]
  [["fedora"] ["kernel-headers"]]
  [["rhel"] ["kernel-headers"]]
  [["ubuntu"] ["linux-libc-dev"]]
]
conflicts: [
  "solo5-bindings-genode"
  "solo5-bindings-muen"
  "solo5-bindings-virtio"
]
available: [
  (arch = "x86_64" | arch = "arm64") &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (hvt target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build and
run MirageOS unikernels on the "hvt" target, including the
"solo5-hvt" tender source code, and "solo5-hvt-configure" script
used to specialize the tender at MirageOS unikernel build time.

The "hvt" target is supported on 64-bit Linux, FreeBSD and
OpenBSD systems with hardware virtualization."""
