opam-version: "1.2"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "https://github.com/solo5/solo5.git"
build: [make "ukvm"]
install: [make "opam-ukvm-install" "PREFIX=%{prefix}%"]
remove: [make "opam-ukvm-uninstall" "PREFIX=%{prefix}%"]
depends: "conf-pkg-config"
depexts: [
  [["alpine"] ["linux-headers"]]
  [["debian"] ["linux-libc-dev"]]
  [["fedora"] ["kernel-headers"]]
  [["rhel"] ["kernel-headers"]]
  [["ubuntu"] ["linux-libc-dev"]]
]
conflicts: [
  "solo5-kernel-virtio"
  "solo5-kernel-muen"
]
available: [
  ocaml-version >= "4.02.3" & (arch = "x86_64" | arch = "amd64" | arch = "aarch64") &
  (os = "linux" | os = "freebsd")
]
