opam-version: "1.2"
maintainer:   "martin@lucina.net"
homepage:     "https://github.com/solo5/solo5"
bug-reports:  "https://github.com/solo5/solo5/issues"
dev-repo:     "https://github.com/solo5/solo5.git"
authors:      [ "Dan Williams <djwillia@us.ibm.com>" "Martin Lucina <martin@lucina.net>" "Ricardo Koller <kollerr@us.ibm.com>"]
license:      "ISC"

build:  [make "virtio"]
install:[make "opam-virtio-install" "PREFIX=%{prefix}%"]
remove: [make "opam-virtio-uninstall" "PREFIX=%{prefix}%"]

depends: [
  "conf-pkg-config"
]

conflicts: [
  "solo5-kernel-ukvm"
]

available: [
  ocaml-version >= "4.02.3" & (arch = "x86_64" | arch = "amd64") & os != "darwin"
]
