opam-version: "2.0"
maintainer: "ehmry@posteo.net"
authors: [
  "Emery Hemingway <ehmry@posteo.net>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh" "--enable-targets=genode"]
  [make "V=1"]
]
install: [make "PREFIX=%{prefix}%" "V=1" "install-bindings"]
depends: [
  "conf-pkg-config"
  "solo5" {= version}
]
conflicts: [
  "ocaml-freestanding" {< "0.7.0"}
  "solo5-bindings-hvt" {< "0.7.0"}
  "solo5-bindings-spt" {< "0.7.0"}
  "solo5-bindings-virtio" {< "0.7.0"}
  "solo5-bindings-muen" {< "0.7.0"}
  "solo5-bindings-xen" {< "0.7.0"}
]
available: [
  (arch = "x86_64") &
  (os = "linux")
]
synopsis: "Solo5 sandboxed execution environment (genode target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "genode" target. The resulting
unikernels can then be deployed directly on a host running the
Genode Operating System Framework.

Building the "genode" target is supported on 64-bit Linux
systems."""
