opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "conf-pkg-config"
  "conf-libseccomp" {build & os = "linux"}
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.6.0"}
]
depexts: [
  ["linux-headers"] {os-distribution = "alpine"}
  ["kernel-headers"] {os-distribution = "fedora"}
  ["kernel-headers"] {os-distribution = "rhel"}
  ["linux-libc-dev"] {os-family = "debian"}
]
conflicts: [
  "ocaml-freestanding" {< "0.6.0"}
]
available: [
  (arch = "x86_64" | arch = "arm64") &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (hvt target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build and
run MirageOS unikernels on the "hvt" target, including the
"solo5-hvt" tender source code, and "solo5-hvt-configure" script
used to specialize the tender at MirageOS unikernel build time.

The "hvt" target is supported on 64-bit Linux, FreeBSD and
OpenBSD systems with hardware virtualization."""
