opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh" "--prefix=%{prefix}%" "--enable-targets=hvt"]
  [make "V=1"]
]
install: [make "V=1" "install-bindings" "install-tenders"]
depends: [
  "conf-pkg-config" {build & os = "linux"}
  "solo5" {= version}
  "solo5-config-ocaml-static" {= version}
]
depexts: [
  ["linux-headers"] {os-distribution = "alpine"}
  ["kernel-headers"] {os-distribution = "fedora"}
  ["kernel-headers"] {os-distribution = "rhel"}
  ["linux-libc-dev"] {os-family = "debian"}
]
conflicts: [
  "ocaml-freestanding" {< "0.7.0"}
  "solo5-bindings-spt" {< "0.7.0"}
  "solo5-bindings-virtio" {< "0.7.0"}
  "solo5-bindings-muen" {< "0.7.0"}
  "solo5-bindings-genode" {< "0.7.0"}
  "solo5-bindings-xen" {< "0.7.0"}
]
available: [
  (arch = "x86_64" | arch = "arm64") &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (hvt target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "hvt" target.

This package also provides the "solo5-hvt" tender needed to
run MirageOS unikernels on the "hvt" target.

The "hvt" target is supported on 64-bit Linux, FreeBSD and
OpenBSD systems with hardware virtualization."""
