opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh"]
  [make "V=1" "CONFIG_HVT=" "CONFIG_SPT=" "CONFIG_VIRTIO=" "CONFIG_GENODE=" "CONFIG_XEN="]
]
install: [make "V=1" "CONFIG_HVT=" "CONFIG_SPT=" "CONFIG_VIRTIO=" "CONFIG_GENODE=" "CONFIG_XEN=" "install-opam-muen" "PREFIX=%{prefix}%"]
depends: [
  "conf-pkg-config"
  "conf-libseccomp" {build & os = "linux"}
]
conflicts: [
  "ocaml-freestanding" {< "0.6.0"}
  "solo5-bindings-genode"
  "solo5-bindings-hvt"
  "solo5-bindings-spt"
  "solo5-bindings-virtio"
  "solo5-bindings-xen"
]
available: [
  arch = "x86_64" &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (muen target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "muen" target. The resulting
unikernels can then be deployed directly on a host running the
Muen Separation Kernel.

Building the "muen" target is supported on 64-bit Linux, FreeBSD
and OpenBSD systems."""
