opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh"]
  [make "V=1" "CONFIG_HVT=" "CONFIG_VIRTIO=" "CONFIG_MUEN=" "CONFIG_GENODE=" "CONFIG_XEN="]
]
install: [make "V=1" "CONFIG_HVT=" "CONFIG_VIRTIO=" "CONFIG_MUEN=" "CONFIG_GENODE=" "CONFIG_XEN=" "install-opam-spt" "PREFIX=%{prefix}%"]
depends: [
  "conf-pkg-config"
  "conf-libseccomp" {os = "linux"}
]
depexts: [
  ["linux-headers"] {os-distribution = "alpine"}
  ["kernel-headers"] {os-distribution = "fedora"}
  ["kernel-headers"] {os-distribution = "rhel"}
  ["linux-libc-dev"] {os-family = "debian"}
]
conflicts: [
  "ocaml-freestanding" {< "0.6.0"}
  "solo5-bindings-hvt"
  "solo5-bindings-virtio"
  "solo5-bindings-muen"
  "solo5-bindings-genode"
  "solo5-bindings-xen"
]
available: [
  (arch = "x86_64" | arch = "arm64") & os = "linux"
]
synopsis: "Solo5 sandboxed execution environment (spt target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels on the "spt" target and the "solo5-spt" tender
binary used to run such unikernels.

The "spt" target is supported on 64-bit Linux systems only."""
