opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh"]
  [make "V=1" "CONFIG_HVT=" "CONFIG_SPT=" "CONFIG_MUEN=" "CONFIG_GENODE=" "CONFIG_XEN="]
]
install: [make "V=1" "CONFIG_HVT=" "CONFIG_SPT=" "CONFIG_MUEN=" "CONFIG_GENODE=" "CONFIG_XEN=" "install-opam-virtio" "PREFIX=%{prefix}%"]
depends: [
  "conf-pkg-config"
  "conf-libseccomp" {build & os = "linux"}
]
conflicts: [
  "ocaml-freestanding" {< "0.6.0"}
  "solo5-bindings-hvt"
  "solo5-bindings-spt"
  "solo5-bindings-muen"
  "solo5-bindings-genode"
  "solo5-bindings-xen"
]
available: [
  arch = "x86_64" &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (virtio target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels using the "virtio" target.

The "virtio" target is supported on 64-bit Linux and FreeBSD
systems with hardware virtualization, and produces unikernels
suitable for running on any virtio-compliant hypervisor (e.g.
QEMU/KVM).

Note that the "virtio" target provides limited support for
current and future Solo5 features and abstractions. We recommend
that you use the "hvt" target instead."""
