opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh" "--prefix=%{prefix}%" "--enable-targets=virtio"]
  [make "V=1"]
]
install: [make "V=1" "install-bindings"]
depends: [
  "conf-pkg-config" {build & os = "linux"}
  "solo5" {= version}
  "solo5-config-ocaml-static" {= version}
]
conflicts: [
  "ocaml-freestanding" {< "0.7.0"}
  "solo5-bindings-hvt" {< "0.7.0"}
  "solo5-bindings-spt" {< "0.7.0"}
  "solo5-bindings-muen" {< "0.7.0"}
  "solo5-bindings-genode" {< "0.7.0"}
  "solo5-bindings-xen" {< "0.7.0"}
]
available: [
  arch = "x86_64" &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Solo5 sandboxed execution environment (virtio target)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 components needed to build
MirageOS unikernels using the "virtio" target.

The "virtio" target is supported on 64-bit Linux and FreeBSD
systems with hardware virtualization, and produces unikernels
suitable for running on any virtio-compliant hypervisor (e.g.
QEMU/KVM).

Note that the "virtio" target provides limited support for
current and future Solo5 features and abstractions. We recommend
that you use the "hvt" target instead."""
