opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
conflicts: [
  "ocaml-freestanding" {< "0.7.0"}
  "solo5-bindings-hvt" {< "0.7.0"}
  "solo5-bindings-spt" {< "0.7.0"}
  "solo5-bindings-virtio" {< "0.7.0"}
  "solo5-bindings-muen" {< "0.7.0"}
  "solo5-bindings-genode" {< "0.7.0"}
  "solo5-bindings-xen" {< "0.7.0"}
]
available: [
  (arch = "x86_64" | arch = "arm64" | arch = "ppc64") &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
flags: conf
synopsis: "Solo5 sandboxed execution environment (static toolchain)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package is a virtual package selecting the 'static' toolchain
for ocaml-freestanding."""
